work progresses on talking to the external open-source api

--- a/app/views/keywords/show.html.erb
+++ b/app/views/keywords/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Keywords#show</h1>
-<p>Find me in app/views/keywords/show.html.erb</p>
+<h1>Welcome</h1>
+<P>Want some encouraging Bible verses?  Just select your topic below.</P>
+<%= form_tag("/verses/show", method: "get") do %>
+  <div class="select_wrapper">
+  <%= select_tag("keyword_id[]", 
+    options_for_select(@keywords.order(id: :desc).all.collect{ |k| [k.keyword.humanize, k.id] }),     
+    :autofocus => true, 
+    :required => true,
+    :size => 5
+    ) %>
+  </div>
+  <%= submit_tag "Show", class: "aff-button"%> 
+<% end %>
