--- a/app/views/verses/show.html.erb
+++ b/app/views/verses/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Verses#show</h1>
-<p>Find me in app/views/verses/show.html.erb</p>
+<h1>--keyword here--</h1>
+
+<p>--List of verses here</p>
+<ul>
+
+</ul>
+
+
+
