--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="aff-header">
+      <img src="<%= asset_path('aff_logo.png') %>">
+      <!-- div class="aff-tagline">
+        Find encouragement and support for your life.
+      </div -->
+    </div>
+    <div class="aff-content">
+      <%= yield %>
+    </div>
+    <div class="aff-footer">    
+      <em>A demo web app to support the portfolio of crjcodes at <a href="https://codeonward.com">CodeOnward.com</a> and <a href="https://github.com/crjcodes?tab=repositories">GitHub</a></em>
+    </div>
   </body>
 </html>
