--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <div class="aff-body">
     <div class="aff-header">
       <%= link_to image_tag("aff_logo.png"), root_path %>
       <!-- div class="aff-tagline">
@@ -24,8 +25,9 @@
       <div class="use">
         <span>Please use for non-commercial purposes.  </span>
       </div>
-      <div class="version">v0.0.4-alpha
+      <div class="version">v0.0.5-alpha
       </div>
+    </div>
     </div>
   </body>
 </html>
