--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,3 +1,8 @@
+@import '../node_modules/rfs/scss';
+
+
+$rfs-rem-value: 18;
+
 //===============================
 //    COLORS
 //
@@ -32,17 +37,13 @@ $control-border-color: $wine;
 //
 
 $font-stack: Georgia, Utopia, Times, "Times New Roman", serif;
-//$font-size: calc(1em + 1vw);
-$font-size: 100%;
-$line-height: 1.5em;
+$font-size: 1.3rem;
 
-$h1-size: 1.5rem;
-$h2-size: 1.1rem;
-$h3-size: 1.0rem;
-$h4-size: 1.1rem;
-$h5-size: 1.0rem;
-$h6-size: 1.0rem;
-
+$h1: 1.6rem;
+$h2: 1.5rem;
+$h3: 1.4rem;
+$h4: 1.3rem;
+$h5: 1.2rem;
 
 //===============================
 //    LAYOUT SIZING
