--- a/app/views/keywords/show.html.erb
+++ b/app/views/keywords/show.html.erb
@@ -1,19 +1,17 @@
 <h1>Welcome</h1>
 <P>Want some encouraging Bible verses?  Just select your topic below.</P>
 
+<div class="good_box">
+
 <%= form_tag("/verses/show", method: "get") do %>
-  <div class="select_wrapper">
+  <div class="good_select_wrapper">
   <%= 
-    prompt = "Select a keyword"
     keyword_options = @keywords.order(id: :desc).all.collect{ |k| [k.keyword.humanize, k.id] }
-    keyword_options.prepend([prompt, ""])
-    Rails.logger.debug "ko=#{keyword_options}"
 
     select_tag(
       "keyword_id[]", 
       options_for_select( 
-        keyword_options, 
-        :disabled => [prompt, ""]
+        keyword_options
         ),           
       { 
         :required => true,
@@ -23,3 +21,23 @@
   </div>
   <%= submit_tag "Show", class: "aff-button"%> 
 <% end %>
+</div>
+<div class="evil_box">
+<%= form_tag("/verses/show", method: "get") do %>
+  <div class="evil_select_wrapper">
+  <%= 
+    keyword_options = @keywords.order(id: :desc).all.collect{ |k| [k.keyword.humanize, k.id] }
+
+    select_tag(
+      "keyword_id[]", 
+      options_for_select( 
+        keyword_options
+        ),           
+      { 
+        :required => true,
+      }      
+    ) %>
+  </div>
+<%= submit_tag "Show", class: "aff-button"%> 
+<% end %>
+</div>
