Changed to single-element dropdown combo for device and browser differences

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,8 +1,5 @@
 @import '../node_modules/rfs/scss';
 
-
-$rfs-rem-value: 14;
-
 //===============================
 //    COLORS
 //
@@ -37,13 +34,16 @@ $control-border-color: $wine;
 //
 
 $font-stack: Georgia, Utopia, Times, "Times New Roman", serif;
+$font-stack-alt: ‘Frutiger Linotype’, Univers, Calibri, ‘Gill Sans’, ‘Myriad Pro’, Myriad, ‘DejaVu Sans Condensed’, ‘Liberation Sans’, ‘Nimbus Sans L’, Tahoma, Geneva, ‘Helvetica Neue’, Helvetica, Arial, sans-serif;
 $font-size: 1.3rem;
+$line-height: 2.3em;
 
 $h1: 1.6rem;
 $h2: 1.5rem;
 $h3: 1.4rem;
 $h4: 1.3rem;
 $h5: 1.2rem;
+
 
 //===============================
 //    LAYOUT SIZING
