--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -33,6 +33,8 @@ $control-border-color: $wine;
 //    TYPOGRAPHY
 //
 
+$rfs-base-value: 1.5rem;
+
 $font-stack: Georgia, Utopia, Times, "Times New Roman", serif;
 $font-stack-alt: ‘Frutiger Linotype’, Univers, Calibri, ‘Gill Sans’, ‘Myriad Pro’, Myriad, ‘DejaVu Sans Condensed’, ‘Liberation Sans’, ‘Nimbus Sans L’, Tahoma, Geneva, ‘Helvetica Neue’, Helvetica, Arial, sans-serif;
 $font-size: 1.5rem;
